crates/djls-extraction/tests/snapshots/corpus__extraction_snapshots@packages__Django__5.2.11__django__templatetags__tz.py.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/5.2.11/django/templatetags/tz.py
---
tag_rules:
  "django.templatetags.tz::get_current_timezone":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
  "django.templatetags.tz::localtime":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position: 1
        values:
          - "on"
          - "off"
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
  "django.templatetags.tz::timezone":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    supports_as_var: false
filter_arities:
  "django.templatetags.tz::localtime":
    expects_arg: false
    arg_optional: false
  "django.templatetags.tz::timezone":
    expects_arg: true
    arg_optional: false
  "django.templatetags.tz::utc":
    expects_arg: false
    arg_optional: false
block_specs:
  "django.templatetags.tz::localtime":
    end_tag: endlocaltime
    intermediates: []
    opaque: false
  "django.templatetags.tz::timezone":
    end_tag: endtimezone
    intermediates: []
    opaque: false
